# CryptoWallet

backend/ethereum/: .env.example  .gitignore  Makefile  pyproject.toml
backend/ethereum/deploy/: Dockerfile
backend/ethereum/src/: adapters.py  broker.py  configs.py  consts.py  ioc.py  main.py  ports.py  schemas.py
backend/ibay/: .env.example  Makefile  alembic.ini  pyproject.toml
backend/ibay/deploy/: Dockerfile
backend/ibay/src/: amqp_router.py  configs.py  enums.py  faststream.py  services.py  taskiq.py
backend/ibay/src/db/: dtos.py  mappers.py  models.py  repositories.py  session.py
backend/ibay/src/db/migrations/: env.py
backend/ibay/src/db/migrations/versions/: 6ac79f5957c8_add_order.py  aa7197622e8f_init.py
backend/ibay/src/faststream/: __init__.py  amqp_router.py  app.py  services.py  tasks.py
backend/ibay/src/ioc/: broker.py  config.py  container.py  db.py  service.py
backend/rest_api/: .env  .env.example  .gitignore  Makefile  alembic.ini  main.py  pyproject.toml
backend/rest_api/certs/: jwt-private.pem  jwt-public.pem
backend/rest_api/deploy/: Dockerfile
backend/rest_api/deploy/scheduler/: Dockerfile
backend/rest_api/deploy/worker/: Dockerfile
backend/rest_api/src/: broker.py  configs.py  main.py  scheduler.py  server.py
backend/rest_api/src/application/dtos/: events.py
backend/rest_api/src/application/dtos/request/: __init__.py
backend/rest_api/src/application/dtos/response/: __init__.py  paginated_response.py  transactions_list.py
backend/rest_api/src/application/enums/: __init__.py  sort_order.py  transaction.py
backend/rest_api/src/application/interactors/: __init__.py
backend/rest_api/src/application/interactors/asset/: __init__.py  create_asset.py  get_asset.py
backend/rest_api/src/application/interactors/auth/: __init__.py  login.py  register.py
backend/rest_api/src/application/interactors/order/: __init__.py  create_order.py  get_orders.py  update_order.py
backend/rest_api/src/application/interactors/product/: __init__.py  create_product.py  get_products.py
backend/rest_api/src/application/interactors/transaction/: __init__.py  complete_transaction.py  create_pending_transaction.py  get_transactions.py  publish_create_transaction.py
backend/rest_api/src/application/interactors/user/: __init__.py  delete_avatar.py  get_current_user.py  get_user.py  get_user_profile.py  increment_total_messages.py  login.py  register.py  update_user.py
backend/rest_api/src/application/interactors/wallet/: __init__.py  get_wallets.py  publish_create_wallet.py  publish_import_wallet.py  publish_request_free_eth.py  save_create_wallet.py  save_import_wallet.py
backend/rest_api/src/application/ports/events/: __init__.py  event_publisher.py
backend/rest_api/src/application/ports/gateways/: __init__.py  asset.py  order.py  permissions.py  product.py  transaction.py  user.py  wallet.py
backend/rest_api/src/application/ports/providers/: __init__.py  file_uploader.py  jwt.py  mail.py
backend/rest_api/src/application/ports/tasks/: __init__.py  task_runner.py
backend/rest_api/src/application/ports/transaction/: __init__.py  flusher.py  transaction_manager.py
backend/rest_api/src/domain/entities/: __init__.py  asset.py  base.py  order.py  permissions.py  product.py  transaction.py  user.py  wallet.py
backend/rest_api/src/domain/enums/: __init__.py  asset.py  order.py  transaction.py
backend/rest_api/src/domain/exceptions/: __init__.py  auth.py  base.py  fields.py  product.py  user.py  wallet.py
backend/rest_api/src/domain/ports/: __init__.py  id_generator.py  password_hasher.py  secret_encryptor.py  timestamp_generator.py
backend/rest_api/src/domain/services/: __init__.py  asset.py  order.py  permissions.py  product.py  transaction.py  user.py  wallet.py
backend/rest_api/src/domain/value_objects/: __init__.py  base.py  email.py  entity_id.py  password_hash.py  raw_password.py  url.py  username.py
backend/rest_api/src/domain/value_objects/asset/: __init__.py  asset_name.py  asset_network_type.py  asset_symbol.py  asset_type.py  decimals.py
backend/rest_api/src/domain/value_objects/order/: __init__.py  status.py
backend/rest_api/src/domain/value_objects/permissions/: __init__.py  (+1 more)
backend/rest_api/src/infrastructure/consts/: __init__.py  pagination.py
backend/rest_api/src/infrastructure/exceptions/: __init__.py  auth.py  base.py
backend/rest_api/src/ioc/: __init__.py  application.py  config.py  database.py  domain.py  infrastructure.py  provider_registry.py
backend/rest_api/src/presentation/amqp/: mappers.py  root.py  router.py  types.py
backend/rest_api/src/presentation/cli/: __main__.py
backend/rest_api/src/presentation/http/: auth.py  root.py
backend/rest_api/src/shared/: __init__.py  exception.py
backend/sockets/: .env.example  .gitignore  Makefile  configs.py  jwt_decoder.py  pyproject.toml  s3.py
backend/sockets/deploy/faststream/: Dockerfile
backend/sockets/deploy/socketio/: Dockerfile
backend/sockets/ioc/: broker.py  config.py  image_storage.py  jwt.py  mongo.py  redis_storage.py  registry.py
backend/sockets/mongo/: dtos.py  repositories.py
backend/sockets/rabbit/: __init__.py  amqp_router.py  app.py  dicts.py
backend/sockets/redis_storage/: __init__.py  chat_users.py
backend/sockets/utilities/: file.py
backend/sockets/ws/: __main__.py  app.py  chat_namespace.py  default_namespace.py  types.py
(+293 files in other folders)
