[tool.poetry]
name = "ethereum"
version = "0.1.0"
description = ""
authors = ["ant100pshnik <mypochtav@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "dotenv >=0.9.9,<0.10.0",
    "pydantic >=2.12.2,<3.0.0",
    "web3 >=7.14.0,<8.0.0",
    "httpx >=0.28.1,<0.29.0",
    "faststream[cli,rabbit] >=0.6.1,<0.7.0",
    "dishka >=1.7.2,<2.0.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"