[tool.poetry]
name = "ibay"
version = "0.1.0"
description = ""
authors = ["ant100pshnik <mypochtav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
aiohttp = ">=3.13.2,<4.0.0"
faststream = { version = ">=0.6.3,<0.7.0", extras = ["cli", "rabbit"] }
alembic = ">=1.17.1,<2.0.0"
dishka = ">=1.7.2,<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"