[project]
name = "rest-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ant100pshnik",email = "mypochtav@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "mailjet-rest (>=1.5.1,<2.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.40.52,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "faststream[rabbit] (>=0.6.2,<0.7.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"